fixed smooth scroll on safari

--- a/styles/_inputs.scss
+++ b/styles/_inputs.scss
@@ -4,10 +4,11 @@ select {
     height: 39px ;
     width: 100px;
     letter-spacing: 2px;
-    border: 1px solid black;
+    border: 1px solid $deep-forest-green;
+    color: $deep-forest-green;
     -webkit-appearance: none;
     -moz-appearance: none;
-    background: url('../images/down-arrow.png') no-repeat;
+    background: url('') no-repeat;
     background-size: 7%;
     background-position-x: 95%;
     background-position-y: 50%;
